# easy-paper

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: app.py  extract_images.py  utils.py
src/notion/: __init__.py
src/translate/: __init__.py  __main__.py  claude.py  gemini.py
