[tool.poetry]
package-mode=false

[tool.poetry.dependencies]
python = "3.12.4"
notion-client = "^2.2.1"
anthropic = "^0.31.2"
pypdf = {extras = ["image"], version = "^4.3.1"}
pygithub = "^2.3.0"
joblib = "^1.4.2"
google-generativeai = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

